Dodano home page

--- a/interwaly/index.html
+++ b/interwaly/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Witam na stronie ćwieczeń interwałów</h1>
+        <h1>Interwały</h1>
         <header>
             <div>
                 <button onclick="start()">start</button>
