--- a/interwaly/index.html
+++ b/interwaly/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Intervals</title>
+        <title>Interwały</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
